--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <span class="advantages-text">&mdash; №1 &mdash;</span>
                 <p class="advantages-text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
-              <img class="advantages-image advantages-image-first" src="img/sedona.jpg" width="800" height="256" alt="Фото улицы города Седона">
+              <img class="advantages-image" src="img/sedona.jpg" width="800" height="256" alt="Фото улицы города Седона">
               <ul class="clear-list city-features-list">
                 <li class="features-item features-item-house">
                   <b class="features-title">Жильё</b>
@@ -76,7 +76,7 @@
                 <span class="advantages-text">&mdash; №2 &mdash;</span>
                 <p class="advantages-text">Да, По нему можно пройти! Если конечно вы осмелитесь</p>
               </div>
-              <img class="advantages-image advantages-image-second" src="img/devils-bridge.jpg" width="800" height="256" alt="Фото моста дьявола: скальная арка над долиной каньонов">
+              <img class="advantages-image" src="img/devils-bridge.jpg" width="800" height="256" alt="Фото моста дьявола: скальная арка над долиной каньонов">
             </li>
 
             <li class="advantages-item advantages-card">
@@ -115,7 +115,7 @@
   
         <section class="section-map">
           <h2 class="visually-hidden">Карта города Седона</h2>
-          <form class="search-form-wrap search-form-open" name="hotel-search-form" method="get" action="https://echo.htmlacademy.ru/">
+          <form class="search-form-wrap" name="hotel-search-form" method="get" action="https://echo.htmlacademy.ru/">
             <p class="hotel-search-paragraph">
               <label class="hotel-search-label" for="hotel-search-checkin">Дата заезда:</label>
               <input class="hotel-search-input"  id="hotel-search-checkin" type="text" name="checkin-date" placeholder="24 апреля 2017" required>
@@ -126,6 +126,7 @@
                 </svg>
               </button>
             </p>
+
             <p class="hotel-search-paragraph">
               <label class="hotel-search-label" for="hotel-search-checkout">Дата выезда:</label>
               <input class="hotel-search-input" id="hotel-search-checkout" type="text" name="checkout-date" placeholder="4 июля 2017" required>
@@ -136,6 +137,7 @@
                 </svg>
               </button>
             </p>
+
             <p class="hotel-search-paragraph hotel-search-adults">
               <label class="hotel-search-label" for="hotel-search-adults">Взрослые:</label>
               <button class="hotel-search-controls-button"  aria-hidden="true">
@@ -150,6 +152,7 @@
                 </svg>
               </button>
             </p>
+
             <p class="hotel-search-paragraph hotel-search-children">
               <label class="hotel-search-label" for="hotel-search-children">Дети:</label>
               <button class="hotel-search-controls-button"  aria-hidden="true">
@@ -166,7 +169,7 @@
             </p>
             <button class="button button-blue hotel-search-submit-button" type="submit">Найти</button>
           </form>
-          <!-- <img src="img/map.png" width="1200" height="594" alt="Карта города Седона и его окрестностей"> -->
+
           <iframe class="sedona-google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d395903.4202154215!2d-111.99756769592571!3d34.8029628634464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1614843729221!5m2!1sru!2sru" width="1200" height="594" allowfullscreen="" loading="lazy"></iframe>
         </section>
       </main>
@@ -191,6 +194,7 @@
                 </svg>
               </a>
             </li>
+
             <li class="socials-item">
               <a class="socials-link" href="#" aria-label="Facebook">
                 <svg class="socials-link-fb" width="12" height="22" viewBox="0 0 12 22" fill="none" aria-hidden="true">
@@ -198,6 +202,7 @@
                   </svg>
               </a>
             </li>
+
             <li class="socials-item">
               <a class="socials-link" href="#" aria-label="YouTube">
                 <svg  class="socials-link-youtube" width="20" height="16" viewBox="0 0 20 16" fill="none" aria-hidden="true">
