--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   
         <section class="section-map">
           <h2 class="visually-hidden">Карта города Седона</h2>
-          <form class="search-form-wrap" name="hotel-search-form" method="get" action="https://echo.htmlacademy.ru/">
+          <form class="search-form" name="hotel-search-form" method="get" action="https://echo.htmlacademy.ru/">
             <p class="hotel-search-paragraph">
               <label class="hotel-search-label" for="hotel-search-checkin">Дата заезда:</label>
               <input class="hotel-search-input"  id="hotel-search-checkin" type="text" name="checkin-date" placeholder="24 апреля 2017" required>
@@ -160,7 +160,7 @@
                   <rect width="12" height="3"/>
                 </svg>
               </button>
-              <input class="hotel-search-input" id="hotel-search-children" type="text" name="children" placeholder="0" required>
+              <input class="hotel-search-input" id="hotel-search-children" type="text" name="children" placeholder="0">
               <button class="hotel-search-controls-button minus-button"  aria-hidden="true">
                 <svg width="11" height="11" viewBox="0 0 11 11" fill="#A9A9A9">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23086 6.76932V11H6.76932V6.76932H11V4.23086H6.76932V0H4.23085V4.23086H0V6.76932H4.23086Z"/>
