--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   <link rel="preload" href="fonts/PTSans-Bold.woff2" as="font">
   <link rel="preload" href="fonts/PTSans-Bold.woff2" as="font">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style-min.css">
   <title>Гостиницы в Седоне</title>
 </head>
 <body class="page-body catalog-page">
@@ -136,7 +136,7 @@
             <svg width="11" height="10" viewBox="0 0 11 10" fill="#CACACA" aria-hidden="true">
               <path d="M5.5 0L0 10H11L5.5 0Z"/>
             </svg>
-          </a><!--сортировать по возрастанию параметра-->
+          </a><!--сортировать по возрастанию-->
           <a class="sorting-direction-link direction-link-down direction-link-current" href="#" aria-label="Показать результаты по убыванию">
             <svg width="11" height="10" viewBox="0 0 11 10" fill="#CACACA" aria-hidden="true">
               <path d="M5.5 10L0 0H11"/>
