--- a/catalog.html
+++ b/catalog.html
@@ -15,8 +15,8 @@
 <body class="page-body catalog-page">
   <div class="page-wrap container">
     <header class="main-header">
-      <a href="index.html">
-        <img class="main-header-logo" src="img/logo/sedona.svg" width="138" height="70" alt="Логотип города Седона">
+      <a class="main-header-logo main-header-logo-link" href="index.html">
+        <img src="img/logo/sedona.svg" width="138" height="70" alt="Логотип города Седона">
       </a>
       <nav>
         <ul class="clear-list navigation-list">
@@ -150,9 +150,11 @@
         <ul class="clear-list result-list">
           <li>
             <article class="result-item">
-              <h3 class="result-title">Amara Resort & Spa</h3>
+              <h3 class="result-title">
+                <a class="result-title-link" href="#">Amara Resort & Spa</a>
+              </h3>
               <img src="img/hotels/amara-resort.jpg" width="135" height="90" alt="Гостиница Amara Resort & Spa среди гор">
-              <div class="result-stars result-stars-four" aria-label="Отель категории 4 звезды"></div><!--звездность жилья-->
+              <div class="result-stars result-stars-four" aria-label="Отель категории 4 звезды"></div>
               <p class="result-text">
                 <span class="result-category">Гостиница</span>
                 <span>от 4000 р.</span>
@@ -167,9 +169,11 @@
 
           <li>
             <article class="result-item">
-              <h3 class="result-title">Desert Quail Inn</h3>
+              <h3 class="result-title">
+                <a class="result-title-link" href="#">Desert Quail Inn</a>
+              </h3>
               <img src="img/hotels/desert-quail-inn.jpg" width="135" height="90" alt="Придорожный мотель Desert Quail Inn">
-              <span class="result-stars result-stars-three" aria-label="Отель категории 3 звезды"></span><!--звездность жилья-->
+              <span class="result-stars result-stars-three" aria-label="Отель категории 3 звезды"></span>
               <p class="result-text">
                 <span class="result-category">Мотель</span>
                 <span>от 3000 р.</span>
@@ -184,9 +188,11 @@
 
           <li>
             <article class="result-item">
-              <h3 class="result-title">Villas At Poco Diablo</h3>
+              <h3 class="result-title">
+                <a class="result-title-link" href="#">Villas At Poco Diablo</a>
+              </h3>
               <img src="img/hotels/villas-at-poco-diablo.jpg" width="135" height="90" alt="Апартаменты Villas At Poco Diablo с прилегающей лужайкой">
-              <span class="result-stars result-stars-two" aria-label="Отель категории 2 звезды"></span><!--звездность жилья-->
+              <span class="result-stars result-stars-two" aria-label="Отель категории 2 звезды"></span>
               <p class="result-text">
                 <span class="result-category">Апартаменты</span>
                 <span>от 2000 р.</span>
