--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body class="page-body">
     <div class="page-wrap container">
       <header class="main-header">
-        <a>
-          <img class="main-header-logo" src="img/logo/sedona.svg" width="138" height="70" alt="Логотип города Седона" >
+        <a class="main-header-logo">
+          <img src="img/logo/sedona.svg" width="138" height="70" alt="Логотип города Седона" >
         </a>
         <nav>
           <ul class="clear-list navigation-list">
@@ -170,7 +170,8 @@
             <button class="button button-blue hotel-search-submit-button" type="submit">Найти</button>
           </form>
 
-          <iframe class="sedona-google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d395903.4202154215!2d-111.99756769592571!3d34.8029628634464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1614843729221!5m2!1sru!2sru" width="1200" height="594" allowfullscreen="" loading="lazy"></iframe>
+          <img class="map-image" src="img/map.png" width="1200" height="594" alt="Карта города Седона и его окрестностей">
+          <iframe class="sedona-google-map sedona-google-map-hidden" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d395903.4202154215!2d-111.99756769592571!3d34.8029628634464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1614843729221!5m2!1sru!2sru" width="1200" height="594" allowfullscreen="" loading="lazy"></iframe>
         </section>
       </main>
      
