--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
       <main class="main-content">
         <h1 class="hero">
           <span class="visually-hidden">Седона - городок покруче, чем Большой каньон</span>
-          <img class="welcome-phrase" src="img/welcome.svg" alt="Добро пожаловать в прекрасную Седону">         
         </h1>
 
         <section class="advantages-section">
@@ -46,7 +45,7 @@
             Седона &mdash; небольшой городок в Аризоне, заслуживающий большего!
           </strong>
           <h2 class="text advantages-section-description">Рассмотрим 5 причин, по которым Седона круче чем Гранд Каньон!</h2>
-          <ul class="clear-list advantages-list">
+          <ol class="clear-list advantages-list">
             <li class="advantages-item advantages-item-accent">
               <div class="advantages-card">
                 <h3 class="advantages-title">Настоящий городок</h3>
@@ -92,14 +91,14 @@
             </li>
 
             <li class="advantages-item advantages-card">
-              <h3 class="advantages-title">
-                Мало<br> 
+              <h3 class="advantages-title advantages-title-min">
+                Мало 
                 туристов
               </h3>
               <span class="advantages-text">&mdash; №5 &mdash;</span>
               <p class="advantages-text">Большинство едет в Гранд Каньон и&nbsp;толпится там</p>
             </li>
-          </ul>
+          </ol>
         </section>
   
         <section class="hotel-search-section">
