--- a/index.html
+++ b/index.html
@@ -91,10 +91,7 @@
             </li>
 
             <li class="advantages-item advantages-card">
-              <h3 class="advantages-title advantages-title-min">
-                Мало 
-                туристов
-              </h3>
+              <h3 class="advantages-title advantages-title-min">Мало туристов</h3>
               <span class="advantages-text">&mdash; №5 &mdash;</span>
               <p class="advantages-text">Большинство едет в Гранд Каньон и&nbsp;толпится там</p>
             </li>
@@ -109,7 +106,6 @@
             и мы покажем вам лучшие предложения гостиниц в Седоне
           </p>
           <button class="button button-brown form-display-button" type="button">Поиск гостиницы в Седоне</button>
-          
         </section>
   
         <section class="section-map">
